tests/fixtures/invalid/bool_sub_none.py
# Cannot subtract Bool and None
x: bool = True - None
